Fix Lens Blur filter artifacts when used as an Adjustment Layer

BUG:336470